# Galaxy-Renderer

./: .bazelrc  .gitignore  BHTree.cpp  BHTree.h  BUILD  CHANGELOG  CMakeLists.txt  Constants.cpp  Constants.h  CumulativeDistributionFunction.cpp  CumulativeDistributionFunction.h  FastMath.cpp  FastMath.h  Galaxy.cpp  Galaxy.h  GalaxyProp.cpp  GalaxyProp.h  GalaxySetup.cpp  GalaxySetup.h  GalaxyWnd.cpp  GalaxyWnd.h  Helper.cpp  Intensity.cpp  Intensity.h  LICENSE  Makefile  MathHelper.cpp  MathHelper.h  NBodyWnd.cpp  NBodyWnd.h  OrbitCalculator.cpp  OrbitCalculator.h  ParticleData.cpp  ParticleData.h  README.md  SDLWnd.cpp  SDLWnd.h  Star.cpp  Star.h  TextBuffer.cpp  (+22 more)
cmake/: toolchain-mingw64.cmake
include/: CumulativeDistributionFunction.hpp  Galaxy.hpp  GalaxyWnd.hpp  Helper.hpp  MathHelper.hpp  SDLWnd.hpp  Star.hpp  TextBuffer.hpp  Types.hpp  VertexBuffer.hpp  VertexBufferBase.hpp  VertexBufferLines.hpp  VertexBufferStars.hpp  VideoRecorder.hpp  specrend.h
nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml
nbproject/private/: configurations.xml  private.xml
packaging/: build-appimage.sh  build-windows.sh  galaxy_renderer.desktop  toolchain-mingw64.cmake
presets/: Galaxy 1.txt  Galaxy 2.txt  Galaxy 3.txt  Galaxy 4.txt  Galaxy 5.txt  Galaxy 6.txt  Galaxy 7.txt  Galaxy 8.txt  Galaxy 9.txt
vsproject/: GalaxyWnd.h  TextBuffer.cpp  VertexBufferLines.hpp  galaxy_win.sln  galaxy_win.vcxproj  galaxy_win.vcxproj.filters  galaxy_win_no_text.sln  galaxy_win_no_text.vcxproj  galaxy_win_no_text.vcxproj.filters  packages.config
vsproject/Debug/: galaxy_win_no_text.vcxproj.FileListAbsolute.txt
vsproject/ipch/galaxy_win_no_text-6762bcef/: galaxy-renderer-3b5edd14.ipch
